# time2leave

./: .gitignore  Makefile  README.md  package-lock.json  package.json  setup.sh
.cursor/rules/: liquid-glass-must-be-native.mdc
.github/workflows/: ci.yml
apps/mobile/: .env.example  .gitignore  README.md  STORE_RELEASE.md  app.config.ts  app.json  babel.config.js  eas.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/assets/: README.md
apps/mobile/scripts/: generate-icons.mjs  pull-env.sh  set-env-var.sh
apps/web/: Dockerfile  package.json  vitest.config.ts
apps/web/app/: root.tsx
apps/web/scripts/: deploy-to-s3.sh
backend/: .env.example  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin_api.py  auth_api.py  healthcheck_api.py  traffic_api.py  trips_api.py
backend/app/auth/: __init__.py  apple.py  dependencies.py  google.py  sessions.py
backend/app/constants/: secrets.py
backend/app/db/: db.py  schema_bootstrap.py
backend/app/job/: data_gathering.py  providers.py
backend/app/services/: __init__.py  address_validation.py  allowlist.py  trip_mutations.py  trips.py  users.py
backend/db/init/: 001_schema.sql  002_seed.sql  _generate_seed.py
backend/db/migrations/: 001_add_apple_sub.sql
backend/scripts/: build-and-deploy.sh  seed_local.py
backend/tests/: conftest.py
backend/tests/api/: test_admin_endpoint.py  test_auth_api.py  test_commute_endpoints.py  test_healthcheck.py  test_trips_api.py
backend/tests/integration/: test_end_to_end.py
backend/tests/unit/: test_address_validation.py  test_config.py  test_data_gathering.py  test_google_auth.py  test_providers.py  test_schema_bootstrap.py  test_sessions.py  test_traffic_api_helpers.py  test_trip_mutations.py  test_trips_service.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/app/: root.tsx  routes.ts
frontend/app/components/: AdminRoute.tsx  AppShell.tsx  DemoHeatmap.tsx  DevLoginButton.tsx  GoogleSignInButton.tsx  HeatMap.test.tsx  TripCard.test.tsx  TripCard.tsx  TripHeatmap.test.tsx  TripHeatmap.tsx  motion.tsx
frontend/app/constants/: path.ts
frontend/scripts/: configure-cloudfront-headers.sh  configure-cloudfront.sh  deploy-to-s3.sh
(+66 files in other folders)
